# sdkwork-membership

./: AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sdkwork.workflow.json  tsconfig.base.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: package.yml
.sdkwork/: README.md
.sdkwork/plugins/: README.md
.sdkwork/skills/: README.md
apis/app-api/membership/: membership-app-api.openapi.json
apis/backend-api/membership/: membership-backend-api.openapi.json
apps/: README.md
apps/sdkwork-membership-common/: README.md
apps/sdkwork-membership-pc/: .env.example  AGENTS.md  index.html  package.json  sdkwork.app.config.json  tsconfig.json  vite.config.ts
apps/sdkwork-membership-pc/specs/: dependency.composition.json
apps/sdkwork-membership-pc/src/: main.tsx
crates/sdkwork-api-membership-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-api-membership-assembly/specs/: README.md  component.spec.json
crates/sdkwork-api-membership-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-api-membership-standalone-gateway/: Cargo.toml
crates/sdkwork-api-membership-standalone-gateway/src/: main.rs
crates/sdkwork-commerce-membership-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-commerce-membership-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-commerce-membership-repository-sqlx/src/: admin_router.rs  lib.rs  postgres.rs  read_model.rs  request_identity.rs  router.rs  seed.rs  shared.rs  sqlite.rs  subject.rs  types.rs
crates/sdkwork-commerce-membership-repository-sqlx/tests/: membership_sqlx_standard.rs
crates/sdkwork-commerce-membership-service/: Cargo.toml  README.md
crates/sdkwork-commerce-membership-service/specs/: README.md  component.spec.json
crates/sdkwork-commerce-membership-service/src/commands/: mod.rs
crates/sdkwork-commerce-membership-service/src/domain/: mod.rs
crates/sdkwork-commerce-membership-service/src/ports/: mod.rs
crates/sdkwork-commerce-membership-service/src/queries/: mod.rs
crates/sdkwork-commerce-membership-service/src/service/: mod.rs
crates/sdkwork-commerce-membership-service/src/validation/: mod.rs
crates/sdkwork-commerce-membership-service/tests/: membership_standard.rs
crates/sdkwork-membership-api-server/: Cargo.toml
crates/sdkwork-membership-api-server/src/: lib.rs  main.rs
crates/sdkwork-membership-database-host/: Cargo.toml
crates/sdkwork-membership-database-host/src/: lib.rs
crates/sdkwork-membership-gateway-assembly/: Cargo.toml  assembly-manifest.json
crates/sdkwork-membership-gateway-assembly/specs/: README.md  component.spec.json
crates/sdkwork-membership-gateway-assembly/src/: bootstrap.rs  generated.rs  lib.rs
crates/sdkwork-membership-repository-sqlx/: Cargo.toml  README.md
crates/sdkwork-membership-repository-sqlx/specs/: README.md  component.spec.json
crates/sdkwork-membership-repository-sqlx/src/: admin_router.rs  catalog.rs  entity_id.rs  lib.rs  pagination.rs  postgres.rs  request_identity.rs  response.rs  router.rs  seed.rs  shared.rs  sqlite.rs  subject.rs  types.rs
crates/sdkwork-membership-repository-sqlx/tests/: membership_sqlx_standard.rs
crates/sdkwork-membership-service/: Cargo.toml  README.md
crates/sdkwork-membership-service-host/: Cargo.toml
crates/sdkwork-membership-service-host/src/: lib.rs
crates/sdkwork-membership-service/specs/: README.md  component.spec.json
crates/sdkwork-membership-service/tests/: membership_standard.rs
crates/sdkwork-membership-standalone-gateway/: Cargo.toml
crates/sdkwork-membership-standalone-gateway/src/: main.rs
crates/sdkwork-router-membership-app-api/: Cargo.toml
crates/sdkwork-router-membership-app-api/src/: lib.rs  routes.rs
crates/sdkwork-router-membership-backend-api/: Cargo.toml
crates/sdkwork-router-membership-backend-api/src/: lib.rs
crates/sdkwork-routes-membership-app-api/: Cargo.toml
crates/sdkwork-routes-membership-app-api/specs/: component.spec.json
crates/sdkwork-routes-membership-app-api/src/: lib.rs  manifest.rs  paths.rs  response.rs  router.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-membership-backend-api/: Cargo.toml
crates/sdkwork-routes-membership-backend-api/specs/: component.spec.json
crates/sdkwork-routes-membership-backend-api/src/: admin_router.rs  lib.rs  manifest.rs  paths.rs  response.rs  routes.rs  web_bootstrap.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/drift/: policy.yaml
database/fixtures/: README.md
database/migrations/postgres/: 0001_membership_extension_tables.down.sql  0001_membership_extension_tables.up.sql  README.md
database/migrations/sqlite/: 0001_membership_extension_tables.down.sql  0001_membership_extension_tables.up.sql  README.md
database/seeds/: seed.manifest.json
database/seeds/common/: 001_bootstrap.sql  001_catalog.sql  002_dev_demo.sql  README.md
database/seeds/locales/: README.md
docs/: INDEX.yaml  README.md
docs/architecture/tech/: TECH_ARCHITECTURE.md
docs/product/prd/: PRD.md
scripts/: align-membership-openapi-catalog-params.mjs  align-membership-openapi-pagination.mjs  reset-postgres-membership-seeds.sql
sdks/sdkwork-membership-app-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-membership-app-sdk/openapi/: sdkwork-membership-app-api.openapi.json  sdkwork-membership-app-api.sdkgen.json
sdks/sdkwork-membership-app-sdk/sdkwork-membership-app-sdk-typescript/: package.json
sdks/sdkwork-membership-app-sdk/specs/: component.spec.json
sdks/sdkwork-membership-backend-sdk/: .sdkwork-assembly.json  sdk-manifest.json
sdks/sdkwork-membership-backend-sdk/specs/: component.spec.json
specs/: COMMERCE_ORDER_BOUNDARY_SPEC.md  README.md  commerce-order-membership-boundary.spec.json  component.spec.json  iam.module.manifest.json
tests/static/: membership-backend-permission-contract.test.mjs  membership-member-scope-contract.test.mjs  membership-page-envelope.test.mjs  membership-standards-regression.test.mjs
(+25 files in other folders)
