[workspace]
resolver = "2"
members = [
    "crates/sdkwork-membership-gateway-assembly",
  "crates/sdkwork-membership-service",
  "crates/sdkwork-membership-repository-sqlx",
  "crates/sdkwork-routes-membership-app-api",
  "crates/sdkwork-routes-membership-backend-api",
  "crates/sdkwork-membership-database-host",
  "crates/sdkwork-membership-service-host",
  "crates/sdkwork-membership-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"
publish = false

[workspace.dependencies]
axum = "0.8"
tokio = { version = "1.51", features = ["macros", "rt-multi-thread", "net", "sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
thiserror = "1"
async-trait = "0.1"
sdkwork_contract_service = { path = "../sdkwork-account/crates/sdkwork-contract-service", package = "sdkwork-contract-service" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust", package = "sdkwork-utils-rust" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-contract = { path = "../sdkwork-web-framework/crates/sdkwork-web-contract" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork_iam_context_service = { path = "../sdkwork-iam/crates/sdkwork-iam-context-service", package = "sdkwork-iam-context-service" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx" }
sdkwork_membership_service = { path = "crates/sdkwork-membership-service", package = "sdkwork-membership-service" }
sdkwork_membership_repository_sqlx = { path = "crates/sdkwork-membership-repository-sqlx", package = "sdkwork-membership-repository-sqlx" }
sdkwork_routes_membership_app_api = { path = "crates/sdkwork-routes-membership-app-api", package = "sdkwork-routes-membership-app-api" }
sdkwork_routes_membership_backend_api = { path = "crates/sdkwork-routes-membership-backend-api", package = "sdkwork-routes-membership-backend-api" }
sdkwork_membership_gateway_assembly = { path = "crates/sdkwork-membership-gateway-assembly", package = "sdkwork-membership-gateway-assembly" }
sdkwork_membership_database_host = { path = "crates/sdkwork-membership-database-host", package = "sdkwork-membership-database-host" }
sdkwork_membership_service_host = { path = "crates/sdkwork-membership-service-host", package = "sdkwork-membership-service-host" }
