[package]
name = "sdkwork-api-membership-standalone-gateway"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "sdkwork-api-membership-standalone-gateway"
path = "src/main.rs"

[dependencies]
sdkwork_api_membership_assembly.workspace = true
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_membership_service_host.workspace = true
