[package]
name = "sdkwork-commerce-membership-repository-sqlx"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "SDKWork commerce Membership SQLx integration and reusable seed installation."

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio", "sqlite", "postgres"] }
sdkwork_commerce_contract_service.workspace = true
sdkwork_commerce_api_server.workspace = true
sdkwork_commerce_bootstrap_manifest.workspace = true
sdkwork_commerce_storage_repository_sqlx.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-web-core.workspace = true
sdkwork-web-axum.workspace = true
sdkwork-iam-web-adapter.workspace = true
sdkwork_iam_context_service.workspace = true

[dev-dependencies]
http-body-util = "0.1"
sdkwork_commerce_api_server.workspace = true
tokio = { version = "1.51", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
