[package]
publish.workspace = true
name = "sdkwork-commerce-membership-service"
version.workspace = true
edition = "2021"
license.workspace = true
description = "SDKWork commerce membership plan, package, entitlement, and subscription domain rules for local/private Rust deployments."

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_commerce_contract_service.workspace = true
sdkwork-utils-rust.workspace = true
