[package]
name = "sdkwork-membership-api-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "membership-server"
path = "src/main.rs"

[dependencies]
sdkwork_membership_gateway_assembly = { package = "sdkwork-membership-gateway-assembly", path = "../sdkwork-membership-gateway-assembly" }
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sdkwork-web-bootstrap.workspace = true
sdkwork_routes_membership_app_api.workspace = true
sdkwork_routes_membership_backend_api.workspace = true
sdkwork_membership_service_host.workspace = true
