[package]
name = "sdkwork-membership-gateway-assembly"
edition.workspace = true
license.workspace = true
version.workspace = true
description = "Generated gateway assembly for sdkwork-membership application HTTP plane."

[lib]
name = "sdkwork_membership_gateway_assembly"
path = "src/lib.rs"

[dependencies]
axum.workspace = true
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
sdkwork_membership_service_host.workspace = true
sdkwork_routes_membership_app_api = { package = "sdkwork-routes-membership-app-api", path = "../sdkwork-routes-membership-app-api" }
sdkwork_routes_membership_backend_api = { package = "sdkwork-routes-membership-backend-api", path = "../sdkwork-routes-membership-backend-api" }
