[package]
name = "sdkwork-membership-repository-sqlx"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"
description = "SDKWork commerce membership SQLx integration, HTTP route adapters, and reusable seed installation."

[lib]
path = "src/lib.rs"

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
sdkwork_contract_service.workspace = true
sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
sdkwork-utils-rust.workspace = true
sdkwork-web-core.workspace = true

[dev-dependencies]
http-body-util = "0.1"
tokio = { workspace = true }
tower = { workspace = true, features = ["util"] }
