[package]
name = "sdkwork-membership-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork_database_sqlx.workspace = true
sdkwork_database_spi.workspace = true
sdkwork_membership_database_host.workspace = true
