[package]
name = "sdkwork-membership-service-host"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sdkwork-database-sqlx.workspace = true
sdkwork-database-spi.workspace = true
sdkwork_membership_database_host.workspace = true
